Fixed z-index on carousel

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -134,10 +134,16 @@
     line-height: 1.33em;/* 20px; (20   /15 = 1.333) */
     margin-top: 0;
 }
-
 .carousel .carousel__item,
-.carousel .carousel__actions button{
+.carousel .carousel__actions{
+    z-index: 0;
+}
+.carousel .carousel__item--visible a{
     z-index: 1;
+}
+
+.carousel .carousel__actions button{
+    z-index: 2;
 }
 
 
